I was a bit stupid and forgot to call the main html file index ...

--- a/www/index.html
+++ b/www/index.html
@@ -34,7 +34,7 @@
 
 			// Null check
 			if (n1 != "" && n2 != "") {
-				history.pushState({},"Battle","battle.html?n1=" + n1 + "&n2=" + n2 +"#");
+				history.pushState({},"Battle","index.html?n1=" + n1 + "&n2=" + n2 +"#");
 			}
 		}
 
